modified:   Introduction_to_Kernel.ipynb

--- a/Introduction_to_Kernel.ipynb
+++ b/Introduction_to_Kernel.ipynb
@@ -7,7 +7,7 @@
     "tags": []
    },
    "source": [
-    "# Introduction to Basics Operation"
+    "# Introduction to Kernel Operation"
    ]
   },
   {
@@ -242,42 +242,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "0bb93289-b660-482b-ac69-2e79687e4b2f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(Array([[1.        , 0.9995836 , 0.9983354 , ..., 0.3985058 , 0.383046  ,\n",
-       "         0.36787945],\n",
-       "        [0.9995836 , 1.        , 0.9995836 , ..., 0.4142443 , 0.39850575,\n",
-       "         0.383046  ],\n",
-       "        [0.9983354 , 0.9995836 , 1.        , ..., 0.43024582, 0.41424426,\n",
-       "         0.39850575],\n",
-       "        ...,\n",
-       "        [0.3985058 , 0.4142443 , 0.43024582, ..., 1.        , 0.9995836 ,\n",
-       "         0.9983354 ],\n",
-       "        [0.383046  , 0.39850575, 0.41424426, ..., 0.9995836 , 1.        ,\n",
-       "         0.9995836 ],\n",
-       "        [0.36787945, 0.383046  , 0.39850575, ..., 0.9983354 , 0.9995836 ,\n",
-       "         1.        ]], dtype=float32),\n",
-       " (50, 50, 2))"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "rbf1(X,X), rbf1.gradient(X,X).shape"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7d540091-a6b6-4610-8e74-40551d07f788",
+   "metadata": {},
+   "source": [
+    "### Bivariate Spectral Mixture (BSM) Kernel\n",
+    "\n",
+    "This part implement bivariate spectral mixture (BSM) kernel as shown in https://proceedings.neurips.cc/paper_files/paper/2017/file/c65d7bd70fe3e5e3a2f3de681edc193d-Paper.pdf\n",
+    "\n",
+    "$\\begin{aligned} k\\left(x, x^{\\prime}\\right) & =\\sum_{i=1}^Q w_i^2 \\exp \\left(-2 \\pi^2 \\tilde{\\mathbf{x}}^T \\Sigma_i \\tilde{\\mathbf{x}}\\right) \\Psi_{\\mu_i, \\mu_i^{\\prime}}(x)^T \\Psi_{\\mu_i, \\mu_i^{\\prime}}\\left(x^{\\prime}\\right) \\\\ & \\Psi_{\\mu_i, \\mu_i^{\\prime}}(x)=\\left(\\begin{array}{c}\\cos 2 \\pi \\mu_i x+\\cos 2 \\pi \\mu_i^{\\prime} x \\\\ \\sin 2 \\pi \\mu_i x+\\sin 2 \\pi \\mu_i^{\\prime} x\\end{array}\\right)\\end{aligned}$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4737943a-9274-4675-a0a0-0c7cbc7d09ee",
+   "id": "ffab8b33-ac7e-41c7-bfb7-b57fdfe57eb7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@jit\n",
+    "def psi(x, mu, mu_prime):\n",
+    "    \"\"\"\n",
+    "    Calculate the sum of the cosine and sine terms for the input x and frequency pairs.\n",
+    "\n",
+    "    :param x: input array (nD)\n",
+    "    :param mu: frequency parameter\n",
+    "    :param mu_prime: frequency parameter\n",
+    "    :return: result of the cosine and sine terms calculation (nD)\n",
+    "    \"\"\"\n",
+    "    return jnp.cos(2 * jnp.pi * mu * x) + jnp.cos(2 * jnp.pi * mu_prime * x) + \\\n",
+    "           jnp.sin(2 * jnp.pi * mu * x) + jnp.sin(2 * jnp.pi * mu_prime * x)\n",
+    "\n",
+    "@jit\n",
+    "def SpectralMixture_kernel(X1, X2, params):\n",
+    "    \"\"\"\n",
+    "    Calculate the Spectral Mixture (SM) kernel for the given inputs and parameters.\n",
+    "\n",
+    "    :param X1: input array 1 (nD)\n",
+    "    :param X2: input array 2 (nD)\n",
+    "    :param params: parameters array containing weights, frequencies, and lengthscales\n",
+    "    :return: kernel value\n",
+    "    \"\"\"\n",
+    "    if len(params) % 5 != 0:\n",
+    "        raise ValueError(\"Incorrect number of parameters for the Spectral Mixture kernel\")\n",
+    "\n",
+    "    # Extract the number of mixture components\n",
+    "    Q = len(params) // 5\n",
+    "\n",
+    "    # Split the parameters into their respective components\n",
+    "    W = jnp.array(params[:Q])\n",
+    "    mu = jnp.array(params[Q:2*Q])\n",
+    "    mu_prime = jnp.array(params[2*Q:3*Q])\n",
+    "    sigma = jnp.array(params[3*Q:4*Q])\n",
+    "\n",
+    "    # Calculate the difference between input arrays\n",
+    "    tilde_x = X1[:, None, :] - X2[None, :, :]\n",
+    "\n",
+    "    # Initialize the kernel value\n",
+    "    kernel = 0\n",
+    "\n",
+    "    # Calculate the kernel value using the sum of the mixture components\n",
+    "    for i in range(Q):\n",
+    "        Wi = W[i]**2\n",
+    "        exp_term = jnp.exp(-2 * jnp.pi**2 * jnp.sum((sigma[i] * tilde_x)**2, axis=-1))\n",
+    "        psi_x = psi(X1, mu[i], mu_prime[i])\n",
+    "        psi_x_prime = psi(X2, mu[i], mu_prime[i])\n",
+    "        kernel += Wi * exp_term * jnp.sum(psi_x[:, None, :] * psi_x_prime[None, :, :], axis=-1)\n",
+    "\n",
+    "    return kernel\n",
+    "\n",
+    "Num_params = 10\n",
+    "\n",
+    "SpectralMixture_kernel = jit(SpectralMixture_kernel)\n",
+    "sp_kernel1 = Kernel(SpectralMixture_kernel, Num_params, jax.random.uniform(jax.random.PRNGKey(0), (Num_params, )), [(1e-5, 1e5),]*Num_params,kernel_name=\"sp_kernel1\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8af41803-e906-4a81-9b9a-254113c9243c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp_kernel1(X,X), sp_kernel1.gradient(X,X).shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3eb3d6d5-d190-4eab-bf05-f58a5621ff2e",
+   "metadata": {},
+   "source": [
+    "## Kernel Operation \n",
+    "\n",
+    "There are two kernel operation impemented in the 'Kernel' class, summation and multiplication. You can add two kernel or time two kernel. The parameters and gradient will take care by itself."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f1e52ff-70ae-44d6-9c23-5fcca63fe72d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kernel_sum1 = rbf1 + dp1\n",
+    "kernel_sum1(X,X), kernel_sum1.gradient(X,X).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13fada1f-82d6-4a8e-aff3-44e23740bf94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kernel_mul1 = rbf1 * dp1\n",
+    "kernel_mul1(X,X), kernel_mul1.gradient(X,X).shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36e2fe06-f037-40fd-9023-0ff693a66adb",
+   "metadata": {},
+   "source": [
+    "Num_params = Num_params_rbf + Num_params_dp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e8ea1da-1682-463b-a3f5-90fe4d32665c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "edcfb910-a185-4e2e-8d17-692889780c89",
    "metadata": {},
    "outputs": [],
    "source": []
